@@ -5,7 +5,7 @@
 
     <title><?php bloginfo('name'); if ( is_single() ) { ?> - Blog Archive <?php } else { ?> - The WebKit Blog <?php } wp_title(); ?></title>
 
-    <meta name="application-name" content="<?php bloginfo('name') ?>">
+    <meta name="application-name" content="SurfinSafari">
 
     <meta name="generator" content="WordPress <?php bloginfo('version'); ?>">
 
@@ -28,8 +28,8 @@
     <link rel="alternate" type="application/atom+xml" title="Atom 0.3" href="<?php bloginfo('atom_url'); ?>">
     <link rel="pingback" href="<?php bloginfo('pingback_url'); ?>">
 
-    <link rel="icon" sizes="16x16 32x32 128x128 256x256" type="image/x-icns" href="/images/surfin-safari.icns">
-    <link rel="SHORTCUT ICON" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" sizes="32x32 128x128 256x256" href="/images/surfin-safari.icns">
+    <link rel="SHORTCUT ICON" sizes="16x16" type="image/x-icon" href="/favicon.ico">
 
 
     <?php wp_head(); ?>
